<resources>
    <string name="app_name">Maps App Sample</string>

    <string name="title_place_picker">Place Picker</string>
    <string name="title_google_map">Google Map</string>
    <string name="title_place_suggestions">Place Suggestions</string>

    <string name="google_app_api_key">AIzaSyA6XrAUKFLeA30Bt6m2uWe0DtFdk9r6Nuc</string>
    <string name="btn_pick_a_place">pick a place</string>
    <string name="btn_open_map">open map</string>
    <string name="btn_static_image">static image</string>
    <string name="tv_place_name">Place name</string>
    <string name="tv_place_address">Place address</string>
    <string name="tv_place_type">Place type</string>
    <string name="title_static_map">Static map</string>
    <string name="hint_center">center</string>
    <string name="tv_scale">scale</string>
    <string name="tv_zoom">zoom</string>
    <string name="btn_get_image_map">get image map</string>
    <string name="tv_map_type">map type</string>
    <string name="btn_place_suggestions">place suggestions</string>
    <string name="hint_search">Search</string>
    <string name="label_marker_clustering">Marker Clustering</string>
    <string name="label_markers_clustering">Markers Clustering</string>

    <string name="template_marker_info">%1$s \nDistance to your current location is %2$s km</string>
    <string name="label_marker_info">Marker info</string>
    <string name="label_close">Close</string>
    <string name="label_mlsdev_maps_sandbox">MLSDev maps sandbox</string>

    <string-array name="map_type_array">
        <item>roadmap</item>
        <item>satellite</item>
        <item>terrain</item>
        <item>hybrid</item>
    </string-array>
</resources>
