<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.mapsappsample.StaticImageMapActivity.ViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_satatic_image_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mlsdev.mapsappsample.StaticImageMapActivity">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_static_map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout style="@style/SeekBarStyleWrapperStyle">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/LabelTextViewStyle"
                    android:text="@string/tv_zoom" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_zoom"
                    style="@style/SeekBarStyle"
                    android:max="21" />
            </LinearLayout>

            <LinearLayout
                style="@style/SeekBarStyleWrapperStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/LabelTextViewStyle"
                    android:text="@string/tv_scale" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_scale"
                    style="@style/SeekBarStyle"
                    android:max="4" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_center" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_get_image_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{viewModel.onGetImageMapButtonClick}"
            android:text="@string/btn_get_image_map" />

    </LinearLayout>

</layout>